# rust-mysql-rocket

./: .env  Cargo.toml  Dockerfile  Rocket.toml
src/: db.rs  main.rs  schema.rs
src/controllers/: user.rs
src/models/: user.rs
