[package]
name = "web-assemble"
version = "0.1.0"
edition = "2018"

[dependencies]
diesel = {version = "1.4.7", features = ["mysql"]}
mysql = "21.0.0"
mysqlclient-sys = "0.2.4"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.10"
rocket_codegen = "0.4.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
dotenv = "0.15.0"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.bigdecimal]
version = "0.2.0"
features = ["serde"]